Sketch load_experiment() function (untested)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,5 +56,4 @@ jobs:
           pip freeze
       - name: Run tests
         run: |
-          # pytest -vs test
-          python example.py
+          make test
