--- a/setup.cfg
+++ b/setup.cfg
@@ -15,5 +15,10 @@ filterwarnings = error
     once::DeprecationWarning
 
 [mypy]
+python_version = 3.7
 ignore_missing_imports = True
-allow_redefinition = True
+warn_incomplete_stub = True
+warn_return_any = True
+warn_unreachable = True
+warn_unused_configs = True
+warn_unused_ignores = True
