--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,13 @@ jobs:
     - uses: actions/checkout@master
       with:
         fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip wheel setuptools
+          pip install sphinx_rtd_theme
+          pip install torch==1.9.0+cpu torchvision==0.10.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
+          pip install .[test]
+          pip freeze
     - name: Build and Commit
       uses: sphinx-notes/pages@v2
     - name: Push changes
