Add end-to-end test, get MCMC jit working again

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ filterwarnings = error
 
 [mypy]
 python_version = 3.7
+check_untyped_defs = True
 ignore_missing_imports = True
 warn_incomplete_stub = True
 warn_return_any = True
